// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdminSidebar Plugins should filter plugins 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter active"
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value="autolink"
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter="autolink"
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            icon="fa-plug"
            key="6"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <FormattedMessage
                defaultMessage="Plugins (Beta)"
                id="admin.sidebar.plugins"
                values={Object {}}
              />
            }
          >
            <AdminSidebarSection
              key="custompluginmattermost-autolink"
              name="plugins/plugin_mattermost-autolink"
              parentLink=""
              subsection={false}
              title="Autolink"
            />
          </AdminSidebarCategory>
        </ul>
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar Plugins should match snapshot 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            icon="fa-plug"
            key="6"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <FormattedMessage
                defaultMessage="Plugins (Beta)"
                id="admin.sidebar.plugins"
                values={Object {}}
              />
            }
          >
            <AdminSidebarSection
              key="5"
              name="plugins/plugin_management"
              parentLink=""
              subsection={false}
              title={
                <FormattedMessage
                  defaultMessage="Plugin Management"
                  id="admin.plugins.pluginManagement"
                  values={Object {}}
                />
              }
            />
            <AdminSidebarSection
              key="custompluginmattermost-autolink"
              name="plugins/plugin_mattermost-autolink"
              parentLink=""
              subsection={false}
              title="Autolink"
            />
          </AdminSidebarCategory>
        </ul>
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        />
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, not prevent the console from loading when empty settings_schema provided 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        />
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, render plugins without any settings as well 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        />
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (with all feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        />
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (without any explicit feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      delayInputUpdate={false}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <Highlight
        filter=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        />
      </Highlight>
    </div>
  </Scrollbars>
</div>
`;
